<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dialog_margin_from_parent"
        android:background="@drawable/alert_view_bg">

        <com.miniapp.viewExtensions.MTextView
            android:id="@+id/logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/app_color"
            android:textSize="20dp"
            app:custFont="fonts/montserrat_regular.otf"/>

        <View
            android:id="@+id/seprator_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/logo_view"
            android:layout_marginTop="3dp"
            android:background="@color/app_color" />

        <ListView
            android:id="@+id/pages_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons_parent"
            android:layout_below="@id/seprator_view"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:padding="@dimen/padding_jobs_items"
            android:scrollbarThumbVertical="@drawable/custom_scroll_style"></ListView>

        <LinearLayout
            android:id="@+id/buttons_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <com.miniapp.viewExtensions.MButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:background="@color/com_facebook_blue"
                android:text="@string/cancel_text"
                android:textColor="@color/white"
                app:custFont="fonts/montserrat_regular.otf"/>

            <com.miniapp.viewExtensions.MButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.45"
                android:background="@color/com_facebook_blue"
                android:text="@string/save_text"
                android:textColor="@color/white"
                app:custFont="fonts/montserrat_regular.otf"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
